[package]
name = "wagyu"
version = "0.6.0"
authors = [
    "Collin Chin",
    "Raymond Chu",
    "Ali Mousa",
    "Howard Wu"
]
description = "A command-line tool to generate cryptocurrency wallets"
homepage = "https://github.com/ArgusHQ/wagyu"
repository = "https://github.com/ArgusHQ/wagyu"
categories = ["command-line-utilities"]
keywords = ["cryptocurrency", "blockchain", "bitcoin", "wallet", "ethereum"]
readme = "README.md"
license = "MIT/Apache-2.0"
edition = "2018"

[lib]
path = "wagyu/lib.rs"

[[bin]]
name = "wagyu"
path = "wagyu/cli.rs"

[workspace]
members = [ "bitcoin", "ethereum", "model", "monero", "zcash" ]

[badges]
travis-ci = { repository = "ArgusHQ/wagyu", branch = "master" }

[dependencies]
bitcoin = { path = "./bitcoin" }
ethereum = { path = "./ethereum" }
wagyu-model = { path = "./model" }
monero = { path = "./monero" }
zcash = { path = "./zcash" }

arrayvec = { version = "0.4.7" }
base58 = { version = "0.1" }
clap = { version = "~2.33.0" }
digest = { version = "0.7.5" }
either = { version = "1.5.0" }
lazy_static = { version = "1.1.0" }
rand = { version = "0.7" }
rand_core = { version = "0.5.0" }
safemem = { version = "0.3.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tiny-keccak = { version = "1.4" }

[profile.release]
opt-level = 3
lto = "thin"
incremental = true

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = "thin"
incremental = true
debug-assertions = false

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 3
incremental = true
debug-assertions = true
debug = true
