[package]
name = "wagyu"
version = "0.6.3"
authors = [
    "Collin Chin",
    "Raymond Chu",
    "Ali Mousa",
    "Howard Wu"
]
description = "A command-line tool to generate cryptocurrency wallets"
homepage = "https://github.com/AleoHQ/wagyu"
repository = "https://github.com/AleoHQ/wagyu"
categories = ["command-line-utilities", "cryptocurrency"]
keywords = ["blockchain", "command-line", "crypto", "cryptocurrency", "wallet"]
readme = "README.md"
license = "MIT/Apache-2.0"
edition = "2018"

[lib]
path = "wagyu/lib.rs"

[[bin]]
name = "wagyu"
path = "wagyu/main.rs"

[workspace]
members = [ "bitcoin", "ethereum", "model", "monero", "zcash" ]

[badges]
travis-ci = { repository = "AleoHQ/wagyu", branch = "master" }

[dependencies]
wagyu-bitcoin = { path = "./bitcoin", version = "0.6.3" }
wagyu-ethereum = { path = "./ethereum", version = "0.6.3" }
wagyu-model = { path = "./model", version = "0.6.3" }
wagyu-monero = { path = "./monero", version = "0.6.3" }
wagyu-zcash = { path = "./zcash", version = "0.6.3" }

arrayvec = { version = "0.5.1" }
base58 = { version = "0.1" }
clap = { version = "~2.33.1" }
colored = { version = "1.9" }
digest = { version = "0.8.1" }
either = { version = "1.5.3" }
failure = { version = "0.1.5" }
hex = { version = "0.4.2" }
lazy_static = { version = "1.4.0" }
rand = { version = "0.7" }
rand_core = { version = "0.5.1" }
safemem = { version = "0.3.3" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tiny-keccak = { version = "1.4" }

[profile.release]
opt-level = 3
lto = "thin"
incremental = true

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = "thin"
incremental = true
debug-assertions = false

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 3
incremental = true
debug-assertions = true
debug = true
