[package]
name = "bitcoin"
version = "0.6.0"
authors = [
    "Collin Chin",
    "Raymond Chu",
    "Ali Mousa",
    "Howard Wu"
]
description = "A library for generating Bitcoin wallets"
homepage = "https://github.com/ArgusDeveloper/wagu"
repository = "https://github.com/ArgusDeveloper/wagu"
categories = ["command-line-utilities"]
keywords = ["cryptocurrency", "blockchain", "bitcoin", "wallet", "ethereum"]
readme = "README.md"
license = "GPL-3.0"
edition = "2018"

[dependencies]
model = { path = "../model" }

base58 = "0.1"
byteorder = { version = "1.2" }
digest = "0.8.1"
generic-array = "0.12.0"
hmac = "0.7.0"
rand = "0.7"
ripemd160 = "0.7"
secp256k1 = "0.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.8"
tiny-keccak = "1.4"

[dev-dependencies]
hex = "0.3.2"

[badges]
travis-ci = { repository = "ArgusDeveloper/wagu", branch = "master" }
