[package]
name = "bitcoin"
version = "0.6.0"
authors = [
    "Collin Chin",
    "Raymond Chu",
    "Ali Mousa",
    "Howard Wu"
]
description = "A library for generating Bitcoin wallets"
homepage = "https://github.com/ArgusHQ/wagu"
repository = "https://github.com/ArgusHQ/wagu"
categories = ["command-line-utilities"]
keywords = ["cryptocurrency", "blockchain", "bitcoin", "wallet", "ethereum"]
readme = "README.md"
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
wagu-model = { path = "../model" }

base58 = { version = "0.1" }
bech32 = { version = "0.6.0" }
bitvec = { version = "0.14.0" }
byteorder = { version = "1.2" }
digest = { version = "0.8.1" }
hex = { version = "0.3.2" }
hmac = { version = "0.7.0" }
pbkdf2 = { version = "0.3.0", features=["parallel"], default-features = false }
rand = { version = "0.7" }
ripemd160 = { version = "0.8" }
secp256k1 = { version = "0.11.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
sha2 = { version = "0.8" }
tiny-keccak = { version = "1.4" }

[badges]
travis-ci = { repository = "ArgusHQ/wagu", branch = "master" }
