[package]
name = "cli"
version = "0.6.0"
authors = [
    "Collin Chin",
    "Raymond Chu",
    "Ali Mousa",
    "Howard Wu"
]
description = "Generate a wallet for any cryptocurrency. Pronounced like wagyu. Wagu is the wallet generation utility. Wagu allows users to generate wallets for the following cryptocurrencies: Bitcoin, Ethereum, Monero, Zcash (Transparent Addresses)"
homepage = "https://github.com/ArgusObserver/wagu"
repository = "https://github.com/ArgusObserver/wagu"
categories = ["command-line-utilities"]
keywords = ["cryptocurrency", "blockchain", "bitcoin", "wallet", "ethereum"]
readme = "README.md"
license = "GPL-3.0"

[dependencies]
bitcoin = { path = "../bitcoin" }
ethereum = { path = "../ethereum" }
zcash = { path = "../zcash" }

arrayvec = "0.4.7"
base58 = "0.1"
clap = "~2.27.0"
digest = "0.7.5"
either = "1.5.0"
lazy_static = "1.1.0"
safemem = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tiny-keccak = "1.4"

[badges]
travis-ci = { repository = "ArgusObserver/wagu", branch = "master" }
