[package]
name = "ethereum"
version = "0.6.0"
authors = [
    "Collin Chin",
    "Raymond Chu",
    "Ali Mousa",
    "Howard Wu"
]
description = "A library for generating Ethereum wallets"
homepage = "https://github.com/ArgusHQ/wagyu"
repository = "https://github.com/ArgusHQ/wagyu"
categories = ["command-line-utilities"]
keywords = ["cryptocurrency", "blockchain", "bitcoin", "wallet", "ethereum"]
readme = "README.md"
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
wagyu-model = { path = "../model" }

base58 = { version = "0.1" }
bitvec = { version = "0.14.0" }
byteorder = { version = "1.2" }
ethereum-types = "0.6.0"
hex = { version = "0.3.2" }
hmac = { version = "0.7.0" }
pbkdf2 = { version = "0.3.0", features=["parallel"], default-features = false }
rand = { version = "0.7" }
regex = { version = "1.0" }
rlp = { version = "0.4" }
secp256k1 = { version = "0.15.0", features = ["recovery"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
sha2 = { version = "0.8" }
tiny-keccak = { version = "1.4" }

[badges]
travis-ci = { repository = "ArgusHQ/wagyu", branch = "master" }
