[package]
name = "wagyu-ethereum"
version = "0.6.1"
authors = [
    "Collin Chin",
    "Raymond Chu",
    "Ali Mousa",
    "Howard Wu"
]
description = "A library for generating Ethereum wallets"
homepage = "https://github.com/ArgusHQ/wagyu"
repository = "https://github.com/ArgusHQ/wagyu/tree/v0.6.1/ethereum"
categories = ["command-line-utilities", "cryptocurrency"]
keywords = ["blockchain", "crypto", "cryptocurrency", "ethereum", "wallet"]
readme = "README.md"
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
wagyu-model = { path = "../model", version = "0.6.1" }

base58 = { version = "0.1" }
bitvec = { version = "0.15.2" }
ethereum-types = { version = "0.6.0" }
hex = { version = "0.4.0" }
hmac = { version = "0.7.0" }
pbkdf2 = { version = "0.3.0", features=["parallel"], default-features = false }
rand = { version = "0.7" }
regex = { version = "1.3" }
secp256k1 = { version = "0.15.5" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
sha2 = { version = "0.8" }
tiny-keccak = { version = "2.0" }

[badges]
travis-ci = { repository = "ArgusHQ/wagyu", branch = "master" }
