[package]
name = "wagyu-ethereum"
version = "0.6.3"
authors = [
    "Collin Chin",
    "Raymond Chu",
    "Ali Mousa",
    "Howard Wu"
]
description = "A library for generating Ethereum wallets"
homepage = "https://github.com/AleoHQ/wagyu"
repository = "https://github.com/AleoHQ/wagyu/tree/v0.6.3/ethereum"
categories = ["command-line-utilities", "cryptocurrency"]
keywords = ["blockchain", "crypto", "cryptocurrency", "ethereum", "wallet"]
readme = "README.md"
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
wagyu-model = { path = "../model", version = "0.6.3" }

base58 = { version = "0.1" }
bitvec = { version = "0.17.4" }
ethereum-types = { version = "0.9.2", default-features = false }
hex = { version = "0.4.2", default-features = false }
hmac = { version = "0.7.0" }
libsecp256k1 = { version = "0.3.5", default-features = false, features = ["hmac"] }
pbkdf2 = { version = "0.3.0", features=["parallel"], default-features = false }
rand = { version = "0.7", default-features = false }
rand_xorshift = { version = "0.2" }
regex = { version = "1.3" }
rlp = { version = "0.4", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
sha2 = { version = "0.8", default-features = false }
tiny-keccak = { version = "1.4" }

[features]
default = ["std"]
std = ["wagyu-model/default"]

[badges]
travis-ci = { repository = "AleoHQ/wagyu", branch = "master" }
