[package]
name = "mnemonic"
version = "0.6.0"
authors = [
    "Collin Chin",
    "Raymond Chu",
    "Ali Mousa",
    "Howard Wu"
]
description = "A library for generating mnemonic seed phrases"
homepage = "https://github.com/ArgusDeveloper/wagu"
repository = "https://github.com/ArgusDeveloper/wagu"
categories = ["command-line-utilities"]
keywords = ["cryptocurrency", "blockchain", "bitcoin", "wallet", "ethereum"]
readme = "README.md"
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
model = { path = "../model" }

bitvec = "0.14.0"
hmac = "0.7.1"
rand = "0.7"
sha2 = "0.8"
pbkdf2 = { version = "0.3.0", features=["parallel"], default-features = false }
ux = "0.1.3"

[dev-dependencies]
hex = "0.3.2"

[badges]
travis-ci = { repository = "ArgusDeveloper/wagu", branch = "master" }
