[package]
name = "wagyu-model"
version = "0.6.1"
authors = [
    "Collin Chin",
    "Raymond Chu",
    "Ali Mousa",
    "Howard Wu"
]
description = "A generic model for cryptocurrency wallets"
homepage = "https://github.com/ArgusHQ/wagyu"
repository = "https://github.com/ArgusHQ/wagyu/tree/v0.6.1/model"
categories = ["command-line-utilities", "cryptocurrency"]
keywords = ["bitcoin", "blockchain", "cryptocurrency", "ethereum", "wallet"]
readme = "README.md"
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
base58 = { version = "0.1" }
base58-monero = { version = "0.2.0" }
bech32 = { version = "0.6" }
byteorder = { version = "1" }
crypto-mac = { version = "0.7.0" }
failure = { version = "0.1.5" }
hex = { version = "0.4.0" }
rand = { version = "0.7" }
rand_core = { version = "0.5.1" }
ripemd160 = { version = "0.8" }
secp256k1 = { version = "0.17.2" }
sha2 = { version = "0.8" }

[badges]
travis-ci = { repository = "ArgusHQ/wagyu", branch = "master" }
