[package]
name = "wagyu-model"
version = "0.6.2"
authors = [
    "Collin Chin",
    "Raymond Chu",
    "Ali Mousa",
    "Howard Wu"
]
description = "A generic model for cryptocurrency wallets"
homepage = "https://github.com/AleoHQ/wagyu"
repository = "https://github.com/AleoHQ/wagyu/tree/v0.6.2/model"
categories = ["command-line-utilities", "cryptocurrency"]
keywords = ["bitcoin", "blockchain", "cryptocurrency", "ethereum", "wallet"]
readme = "README.md"
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
base58 = { version = "0.1" }
base58-monero = { version = "0.2.0" }
bech32 = { version = "0.6" }
byteorder = { version = "1" }
crypto-mac = { version = "0.7.0" }
ethereum-types = { version = "0.9.0" }
ff = { git = "https://github.com/zcash/librustzcash", rev = "2b6fbfd" }
failure = { version = "0.1.5" }
hex = { version = "0.4.2" }
rand = { version = "0.7" }
rand_core = { version = "0.5.1" }
ripemd160 = { version = "0.8" }
rlp = { version = "0.4" }
secp256k1 = { version = "0.17.2" }
serde_json = { version = "1.0" }
sha2 = { version = "0.8" }
uint = { version = "0.8.2" }

[badges]
travis-ci = { repository = "AleoHQ/wagyu", branch = "master" }
