[package]
name = "wagyu-model"
version = "0.6.3"
authors = [
    "Collin Chin",
    "Raymond Chu",
    "Ali Mousa",
    "Howard Wu"
]
description = "A generic model for cryptocurrency wallets"
homepage = "https://github.com/AleoHQ/wagyu"
repository = "https://github.com/AleoHQ/wagyu/tree/v0.6.3/model"
categories = ["command-line-utilities", "cryptocurrency"]
keywords = ["bitcoin", "blockchain", "cryptocurrency", "ethereum", "no_std"]
readme = "README.md"
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
base58 = { version = "0.1" }
base58-monero = { version = "0.2.0" }
bech32 = { version = "0.6" }
byteorder = { version = "1", default-features = false }
crypto-mac = { version = "0.7.0" }
ethereum-types = { version = "0.9.2", default-features = false }
ff = { version = "0.6.0", optional = true }
failure = { version = "0.1.8", default-features = false, features = ["derive"] }
hex = { version = "0.4.2", default-features = false }
libsecp256k1 = { version = "0.3.5", default-features = false, features = ["hmac"] }
rand = { version = "0.7", default-features = false }
rand_core = { version = "0.5.1", default-features = false }
ripemd160 = { version = "0.8", default-features = false }
rlp = { version = "0.4", default-features = false }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
sha2 = { version = "0.8", default-features = false }
uint = { version = "0.8.3", default-features = false }

[features]
default = ["std"]
std = ["ff"]

[badges]
travis-ci = { repository = "AleoHQ/wagyu", branch = "master" }
