[package]
name = "monero"
version = "0.6.0"
authors = [
    "Collin Chin",
    "Raymond Chu",
    "Ali Mousa",
    "Howard Wu"
]
description = "A library for generating Monero wallets"
homepage = "https://github.com/ArgusHQ/wagu"
repository = "https://github.com/ArgusHQ/wagu"
categories = ["command-line-utilities"]
keywords = ["cryptocurrency", "blockchain", "bitcoin", "wallet", "ethereum"]
readme = "README.md"
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
wagu-model = { path = "../model" }

base58-monero = { version = "0.1.1" }
crc = { version = "1.8.1" }
curve25519-dalek = { version = "1.2.1" }
hex = { version = "0.3.2" }
rand = { version = "0.7" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tiny-keccak = { version = "1.4" }

[badges]
travis-ci = { repository = "ArgusHQ/wagu", branch = "master" }
