[package]
name = "wagyu-monero"
version = "0.6.1"
authors = [
    "Collin Chin",
    "Raymond Chu",
    "Ali Mousa",
    "Howard Wu"
]
description = "A library for generating Monero wallets"
homepage = "https://github.com/ArgusHQ/wagyu"
repository = "https://github.com/ArgusHQ/wagyu/tree/v0.6.1/monero"
categories = ["command-line-utilities", "cryptocurrency"]
keywords = ["blockchain", "crypto", "cryptocurrency", "monero", "wallet"]
readme = "README.md"
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
wagyu-model = { path = "../model", version = "0.6.1" }

base58-monero = { version = "0.1.1" }
crc = { version = "1.9.0" }
curve25519-dalek = { version = "1.2.3" }
hex = { version = "0.4.0" }
rand = { version = "0.7" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tiny-keccak = { version = "2.0" }

[badges]
travis-ci = { repository = "ArgusHQ/wagyu", branch = "master" }
