[package]
name = "wagyu-monero"
version = "0.6.3"
authors = [
    "Collin Chin",
    "Raymond Chu",
    "Ali Mousa",
    "Howard Wu"
]
description = "A library for generating Monero wallets"
homepage = "https://github.com/AleoHQ/wagyu"
repository = "https://github.com/AleoHQ/wagyu/tree/v0.6.3/monero"
categories = ["command-line-utilities", "cryptocurrency"]
keywords = ["blockchain", "crypto", "cryptocurrency", "monero", "wallet"]
readme = "README.md"
license = "MIT/Apache-2.0"
edition = "2018"
build = "build.rs"

[features]
default = []
transaction = []

[dependencies]
wagyu-model = { path = "../model", version = "0.6.3" }

base58-monero = { version = "0.2.0" }
crc = { version = "1.8.1" }
curve25519-dalek = { version = "2.0.0" }
failure = { version = "0.1.5" }
hex = { version = "0.4.2" }
libc = { version = "0.2" }
rand = { version = "0.7" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tiny-keccak = { version = "2.0" }

[build-dependencies]
cmake = { version = "0.1" }

[badges]
travis-ci = { repository = "AleoHQ/wagyu", branch = "master" }
