[package]
name = "wagyu-zcash"
version = "0.6.1"
authors = [
    "Collin Chin",
    "Raymond Chu",
    "Ali Mousa",
    "Howard Wu"
]
description = "A library for generating Zcash wallets"
homepage = "https://github.com/ArgusHQ/wagyu"
repository = "https://github.com/ArgusHQ/wagyu/tree/v0.6.1/zcash"
categories = ["command-line-utilities", "cryptocurrency"]
keywords = ["blockchain", "crypto", "cryptocurrency", "wallet", "zcash"]
readme = "README.md"
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
wagyu-model = { path = "../model", version = "0.6.1" }

bellman = { git = "https://github.com/zcash/librustzcash/", rev = "2b6fbfd" }
ff = { git = "https://github.com/zcash/librustzcash", rev = "2b6fbfd" }
pairing = { git = "https://github.com/zcash/librustzcash", rev = "2b6fbfd" }
zcash_primitives = { git = "https://github.com/zcash/librustzcash", rev = "2b6fbfd" }
zcash_proofs = { git = "https://github.com/zcash/librustzcash", rev = "2b6fbfd" }

# librustzcash dependencies
aes = { version = "0.2" }
blake2b_simd = { version = "0.5" }
blake2s_simd = { version = "0.5" }
field-derive = { path = "src/librustzcash/algebra/field/field-derive", version = "0.6.1" }
fpe = { version = "0.1" }
lazy_static = { version = "1.4.0" }

bech32 = { version = "0.6" }
base58 = { version = "0.1" }
byteorder = { version = "1.1" }
curve25519-dalek = { version = "1.2.3" }
hex = { version = "0.4.0" }
rand = { version = "0.7" }
rand_core = { version = "0.5.1" }
rust-crypto = { version = "0.2" }
ripemd160 = { version = "0.7" }
#secp256k1 = { version = "0.15.5" }
secp256k1 = { git = "https://github.com/boltlabs-inc/rust-secp256k1", branch = "0.15.5-partial-sig" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
sha2 = { version = "0.8" }

[dev-dependencies]
# librustzcash dependencies
hex-literal = { version = "0.2" }
rand_xorshift = { version = "0.2" }

[badges]
travis-ci = { repository = "ArgusHQ/wagyu", branch = "master" }
