[package]
name = "wagyu-zcash"
version = "0.6.1"
authors = [
    "Collin Chin",
    "Raymond Chu",
    "Ali Mousa",
    "Howard Wu"
]
description = "A library for generating Zcash wallets"
homepage = "https://github.com/ArgusHQ/wagyu"
repository = "https://github.com/ArgusHQ/wagyu/tree/v0.6.1/zcash"
categories = ["command-line-utilities", "cryptocurrency"]
keywords = ["blockchain", "crypto", "cryptocurrency", "wallet", "zcash"]
readme = "README.md"
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
wagyu-model = { path = "../model", version = "0.6.1" }

# librustzcash dependencies
aes = { version = "0.2" }
blake2b_simd = { version = "0.5" }
blake2s_simd = { version = "0.5" }
field-derive = { path = "src/librustzcash/algebra/field/field-derive", version = "0.6.1" }
fpe = { version = "0.1" }
lazy_static = { version = "1.4.0" }

bech32 = { version = "0.6" }
base58 = { version = "0.1" }
byteorder = { version = "1.3" }
curve25519-dalek = { version = "2.0.0" }
hex = { version = "0.4.2" }
rand = { version = "0.7" }
rand_core = { version = "0.5.1" }
rust-crypto = { version = "0.2" }
ripemd160 = { version = "0.7" }
secp256k1 = { version = "0.17.2" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

[dev-dependencies]
# librustzcash dependencies
hex-literal = { version = "0.2" }
rand_xorshift = { version = "0.2" }

[badges]
travis-ci = { repository = "ArgusHQ/wagyu", branch = "master" }
