[package]
name = "wagyu-zcash"
version = "0.6.3"
authors = [
    "Collin Chin",
    "Raymond Chu",
    "Ali Mousa",
    "Howard Wu"
]
description = "A library for generating Zcash wallets"
homepage = "https://github.com/AleoHQ/wagyu"
repository = "https://github.com/AleoHQ/wagyu/tree/v0.6.3/zcash"
categories = ["command-line-utilities", "cryptocurrency"]
keywords = ["blockchain", "crypto", "cryptocurrency", "wallet", "zcash"]
readme = "README.md"
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
wagyu-model = { path = "../model", version = "0.6.3" }
wagyu-zcash-parameters = { version = "0.2.0" }

# librustzcash dependencies
bellman = { version = "0.6.0" }
ff = { version = "0.6.0" }
pairing = { version = "0.16.0" }
zcash_primitives = { version = "0.2.0" }
zcash_proofs = { version = "0.2.0" }

# librustzcash fork dependencies
aes = { version = "0.2" }
blake2b_simd = { version = "0.5" }
blake2s_simd = { version = "0.5" }
field-derive = { path = "src/librustzcash/algebra/field/field-derive", version = "0.6.1" }
fpe = { version = "0.1" }
lazy_static = { version = "1.4.0" }

bech32 = { version = "0.6" }
base58 = { version = "0.1" }
byteorder = { version = "1.3" }
curve25519-dalek = { version = "2.0.0" }
hex = { version = "0.4.2" }
libsecp256k1 = { version = "0.3.5", default-features = false, features = ["hmac"] }
rand = { version = "0.7" }
rand_core = { version = "0.5.1" }
rust-crypto = { version = "0.2" }
ripemd160 = { version = "0.7" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
sha2 = { version = "0.9" }

[dev-dependencies]
# librustzcash fork dependencies
hex-literal = { version = "0.2" }
rand_xorshift = { version = "0.2" }

[badges]
travis-ci = { repository = "AleoHQ/wagyu", branch = "master" }
