[package]
name = "rustzcash"
version = "0.1.0"
authors = [
    "Sean Bowe <ewillbefull@gmail.com>",
    "Jack Grigg <jack@z.cash>",
    "Jay Graber <jay@z.cash>",
    "Simon Liu <simon@z.cash>"
    ]

[lib]
name = "rustzcash"
path = "src/rustzcash.rs"
#crate-type = ["staticlib"]

[dependencies]
#bellman = { path = "../bellman" }
blake2b_simd = "0.5"
blake2s_simd = "0.5"
#ff = { path = "../ff" }
libc = "0.2"
#pairing = { path = "../pairing" }
lazy_static = "1"
byteorder = "1"
rand_core = "0.5"
rand_os = "0.2"
#zcash_primitives = { path = "../zcash_primitives" }
#zcash_proofs = { path = "../zcash_proofs" }

bellman = { git = "https://github.com/zcash/librustzcash/", branch = "master" }
ff = { git = "https://github.com/zcash/librustzcash/", branch = "master" }
pairing = { git = "https://github.com/zcash/librustzcash/", branch = "master" }
zcash_primitives = { git = "https://github.com/zcash/librustzcash/", branch = "master" }
zcash_proofs = { git = "https://github.com/zcash/librustzcash/", branch = "master" }




